--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: lua_dardo
-description: A Lua virtual machine written in Dart, which implements Lua5.3 version.
-version: 0.0.5
-homepage: https://github.com/arcticfox1919/LuaDardo.git
+name: lua_dardo_async
+description: A Lua virtual machine written in Dart, which implements Lua5.3 version, with async functions.
+version: 0.0.1
+homepage: https://github.com/Pebloop/LuaDardo-async.git
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
