--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ version: 0.0.4
 homepage: https://github.com/Pebloop/LuaDardo-async.git
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  sprintf: ^6.0.0
+  sprintf: ^7.0.0
 
 dev_dependencies:
   pedantic: ^1.11.1
